<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/nome"
        android:textColor="#0000FF"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/email"
        android:textColor="#0000FF"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/telefone"
        android:textColor="#0000FF"/>

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/whats"
            android:textColor="#0000FF"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtWhats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/periodo"
        android:textColor="#0000FF"/>

    <RadioGroup
        android:id="@+id/rdgPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbManha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manha"
            />

        <RadioButton
            android:id="@+id/rdbTarde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tarde"
            />

        <RadioButton
            android:id="@+id/rdbNoite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/noite"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/preferencias"
        android:textColor="#0000FF"/>

    <CheckBox
        android:id="@+id/chkInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet" />

    <CheckBox
        android:id="@+id/chkTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkTelefone" />

    <CheckBox
        android:id="@+id/chkTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv" />

    <CheckBox
        android:id="@+id/chkStreaming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streaming" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:layout_margin="@dimen/margem"
            />

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"
            android:layout_margin="@dimen/margem"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        android:padding="@dimen/margem"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>



